Closed
Bug 1652597
Opened 4 years ago
Closed 4 years ago
Stability issues with RenderCompositorNativeSWGL
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla80
Tracking | Status | |
---|---|---|
firefox80 | --- | fixed |
People
(Reporter: bpeers, Assigned: bpeers)
References
Details
Attachments
(1 file)
SWGL reads/writes past the last pixel by design (for performance reasons), this crashes when the necessary padding is missing.
Until/unless that design changes, macOS will need padding to reach parity with other platforms.
Assignee | ||
Comment 1•4 years ago
|
||
Allocate extra 16 bytes to support past-the-end reads of SWGL.
Updated•4 years ago
|
Assignee: nobody → bpeers
Status: NEW → ASSIGNED
Pushed by bpeers@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8912b78f884b
SWGL crash on Mac r=mstange
Comment 3•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox80:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in
before you can comment on or make changes to this bug.
Description
•