Bug 1652597 - SWGL crash on Mac r=mstange

Allocate extra 16 bytes to support past-the-end reads of SWGL.

Differential Revision: https://phabricator.services.mozilla.com/D83389